adding html files

--- a/staticHtmlFiles/index.html
+++ b/staticHtmlFiles/index.html
@@ -10,7 +10,7 @@
   Product description:<br>
   <input type="text" name="desc" required><br>
     Cost: <br>
-    <input type="text" name="cost" required><br>
+    <input type="text" name="cost" required></br>
      <input type="submit" value="Submit">
 </form>
 
