--- a/static/admin.html
+++ b/static/admin.html
@@ -37,6 +37,6 @@
         </select>
 
     <br> <br> Value to be updated: <br>
-  <input type="text" name="name" required><br>
+  <input type="text" name="valueToBeUpdated" required><br>
      <input type="submit" value="Submit">
 </form>
