--- a/static/admin.html
+++ b/static/admin.html
@@ -13,11 +13,11 @@
      <input type="submit" value="Submit">
 </form>
 
-<h3>Enter the product name to be deleted</h3>
+<h3>Enter the product id to be deleted</h3>
 <form  action="/products" method="POST">
     <input type="text" name="op_type" value="delete" hidden>
     Product name:<br>
-  <input type="text" name="name" required><br>
+  <input type="text" name="id" required><br>
      <input type="submit" value="Submit">
 </form>
 
@@ -25,8 +25,8 @@
 <h3>Enter the product you want to update</h3>
 <form  action="/products" method="POST">
     <input type="text" name="op_type" value="update" hidden>
-    Enter the product Name to be updated: <br>
-  <input type="text" name="name" required><br>
+    Enter the product id to be updated: <br>
+  <input type="text" name="id" required><br>
 
     Select what has to be updated:<br> <br>
 
