--- a/mini_amazon/static/search.html
+++ b/mini_amazon/static/search.html
@@ -1,8 +1,9 @@
 <h1> Hello User.. </h1>
 
 <form  action="/products" method="GET">
-  Enter the Product name you want to search:<br>
+  Enter the product_name you want to search:<br>
   <input type="text" name="name" required><br>
+    <input type="text" name="content_type" value="html" hidden><br>
      <input type="submit" value="Submit"> <br>
 
 </form>
